--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="shortcut icon" type="image/png" href="/assets/killerwhaleph.jpg">
+  <link rel="shortcut icon" type="image/jpg" href="/assets/killerwhaleph.jpg">
 </head>
