Induction eqn. post complete ftm

--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -116,11 +116,11 @@ MathJax.Hub.Register.StartupHook("TeX Jax Ready",function() {
 });
 </script>
 
-window.MathJax = {
+<!-- window.MathJax = {
   tex: {
     tags: 'ams'
   }
-};
+}; -->
 
 <script 
   src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_HTMLorMML' async>
