--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
   {% include head.html %}
   {% include mathjax.html %}
+  {% include analytics.html %}
   <body>
     {% include header.html %}
     <div class="container">
