--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,12 @@
   {% include head.html %}
   {% include mathjax.html %}
   {% include analytics.html %}
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="GPU, HPC, fusion energy, and computational science articles">
+  <meta name="keywords" content="GPU,HPC,physics,fusion,fusion energy,computational science,c,cuda,python">
+
   <body>
     {% include header.html %}
     <div class="container">
